pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-with-auth-tls-secret-shared-host.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: protected-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mtls-conflict.localhost
      secretName: whoami-tls
  rules:
    - host: mtls-conflict.localhost
      http:
        paths:
          - path: /protected
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: same-host-second-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: "default/ca-secret"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - mtls-conflict.localhost
      secretName: whoami-tls
  rules:
    - host: mtls-conflict.localhost
      http:
        paths:
          - path: /second
            pathType: Exact
            backend:
              service:
                name: whoami
                port:
                  number: 80
